--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="mb-5">
       <h2>🔐 Privacy & Security</h2>
       <p>Gitko does <strong>not</strong> collect any personal data or use cookies. Only anonymous traffic metadata is logged.</p>
-      <p>Tracking requests are validated against allowed origins, and the data is stored securely using Cloudflare KV storage.</p>
+      <p>Tracking requests are validated against allowed origins, and the data is stored securely.</p>
     </section>
 
     <section class="mb-5">
@@ -46,7 +46,7 @@
     </section>
 
     <footer class="pt-5 border-top">
-      <p class="text-muted">&copy; 2025 Gitko Analytics — Built with ♥ on Cloudflare</p>
+      <p class="text-muted">&copy; 2025 Gitko Analytics — Built with ♥ on Cloudflare | Gitko Analytics is a registered trademark of PhantomLabs CyberCO LLC. All rights reserved.</p>
     </footer>
   </div>
 </body>
