--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Gitko Tracking Documentation</title>
+  <link href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism.min.css" rel="stylesheet" />
+<script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/prism.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
@@ -16,7 +18,7 @@
     <section class="mb-5">
       <h2>🚀 Quick Start</h2>
       <p>To start tracking your website traffic with Gitko, simply add the following script tag to the <code>&lt;head&gt;</code> of your HTML page:</p>
-      <pre><code>&lt;script src="https://gitko.cubiodojo.workers.dev/track.js" defer&gt;&lt;/script&gt;</code></pre>
+      <pre><code class="language-html">&lt;script src="https://gitko.cubiodojo.workers.dev/track.js" defer&gt;&lt;/script&gt;</code></pre>
     </section>
 
     <section class="mb-5">
