--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
         <li>Device type distribution</li>
       </ul>
     </section>
-
+    
+    <div class="alert alert-warning" role="alert">
+      You are currently viewing the development version. Production and beta are not yet available.
+    </div>
+    
     <footer class="pt-5 border-top">
       <p class="text-muted">&copy; 2025 Gitko Analytics — Built with ♥ on Cloudflare | Gitko Analytics is a registered trademark of PhantomLabs CyberCO LLC. All rights reserved.</p>
     </footer>
