--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img src="https://gitko.pages.dev/assets/images/logo-normal.png" alt="Gitko Logo" style="height: 50px;" class="me-3">
       <h1 class="mb-0">Gitko Analytics Tracking Guide</h1>
     </div>
-    <div class="bd-callout bd-callout-warning">
+    <div class="alert alert-warning" role="alert">
       <strong>Heads up!</strong> You are currently viewing the development version. Production and beta are not yet available.
     </div>
     
