--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <section class="mb-5">
       <h2>📊 Viewing Stats</h2>
-      <p>To view analytics, access your <a href="/index.html">Gitko Dashboard</a>. It shows:</p>
+      <p>To view analytics, access your <a href="https://phantomlabs.pages.dev/Gitko/">Gitko Dashboard</a>. It shows:</p>
       <ul>
         <li>Pageviews per URL</li>
         <li>Top Referrers</li>
