--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="mb-5">
       <h2>🚀 Quick Start</h2>
       <p>To start tracking your website traffic with Gitko, simply add the following script tag to the <code>&lt;head&gt;</code> of your HTML page:</p>
-      <pre><code class="language-html">&lt;script src="https://gitko.cubiodojo.workers.dev/track.js" defer&gt;&lt;/script&gt;</code></pre>
+      <pre><code class="language-html">&lt;script src="https://gitko.pages.dev/track.js" defer&gt;&lt;/script&gt;</code></pre>
     </section>
 
     <section class="mb-5">
