--- a/index.html
+++ b/index.html
@@ -4,84 +4,74 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Gitko Tracking Documentation</title>
-  <link href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism.min.css" rel="stylesheet" />
-<script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/prism.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
   <div class="container py-5">
-    <div class="d-flex align-items-center mb-4">
-      <img src="https://gitko.pages.dev/assets/images/logo-normal.png" alt="Gitko Logo" style="height: 50px;" class="me-3">
-      <h1 class="mb-0">Gitko Analytics Tracking Guide</h1>
+    <div class="d-flex justify-content-between align-items-center mb-4">
+      <div class="d-flex align-items-center">
+        <img src="https://gitko.pages.dev/assets/images/logo-normal.png" alt="Gitko Logo" style="height: 50px;" class="me-3">
+        <h1 class="mb-0">Gitko Analytics Tracking Guide</h1>
+      </div>
+      <button id="darkModeToggle" class="btn btn-outline-secondary btn-sm">Toggle Dark Mode</button>
     </div>
-    <div class="alert alert-warning" role="alert">
-      <strong>Heads up!</strong> You are currently viewing the development version. Production and beta are not yet available.
-    </div>
-    
+
     <section class="mb-5">
       <h2>🚀 Quick Start</h2>
-      <p>To start tracking your website traffic with Gitko, simply add the following script tag to the <code>&lt;head&gt;</code> of your HTML page:</p>
-      <pre><code class="language-html">&lt;script src="https://gitko.pages.dev/track.js" defer&gt;&lt;/script&gt;</code></pre>
+      <p>Add the following tag in the <code>&lt;head&gt;</code> of your website to enable Gitko tracking:</p>
+      <pre class="bg-dark text-white p-3 rounded"><code>&lt;script src="https://gitko.cubiodojo.workers.dev/track.js" defer&gt;&lt;/script&gt;</code></pre>
     </section>
 
     <section class="mb-5">
       <h2>📦 What Gets Tracked?</h2>
       <ul>
-        <li><strong>URL Path:</strong> The path of the page being visited</li>
-        <li><strong>Referrer:</strong> The previous site that sent the visitor</li>
-        <li><strong>User Agent:</strong> The browser & device information</li>
-        <li><strong>Device Type:</strong> <code>mobile</code> or <code>desktop</code> based on screen width</li>
+        <li><strong>URL Path:</strong> The path of the visited page</li>
+        <li><strong>Referrer:</strong> The referring URL</li>
+        <li><strong>User Agent:</strong> Browser/device info</li>
+        <li><strong>Device Type:</strong> <code>mobile</code> or <code>desktop</code></li>
       </ul>
     </section>
 
     <section class="mb-5">
       <h2>🔐 Privacy & Security</h2>
-      <p>Gitko does <strong>not</strong> collect any personal data or use cookies. Only anonymous traffic metadata is logged.</p>
-      <p>Tracking requests are validated against allowed origins, and the data is stored securely.</p>
+      <p>No personal data or cookies are collected. Data is anonymous and secure.</p>
+      <p>Only requests from allowed origins are accepted.</p>
     </section>
 
     <section class="mb-5">
       <h2>📊 Viewing Stats</h2>
-      <p>To view analytics, access your <a href="https://phantomlabs.pages.dev/Gitko/">Gitko Dashboard</a>. It shows:</p>
+      <p>Visit the <a href="./index.html">Gitko Dashboard</a> to see your analytics:</p>
       <ul>
-        <li>Pageviews per URL</li>
+        <li>Pageviews by URL</li>
         <li>Top Referrers</li>
-        <li>Device type distribution</li>
+        <li>Device distribution</li>
       </ul>
     </section>
-    <div class="d-flex justify-content-end">
-      <button id="darkModeToggle" class="btn btn-outline-secondary btn-sm">Toggle Dark Mode</button>
-    </div>
-    <script>
-      const body = document.body;
-      const toggle = document.getElementById('darkModeToggle');
-      const prefersDark = localStorage.getItem('theme') === 'dark';
 
-      function applyTheme(dark) {
+    <footer class="pt-5 border-top">
+      <p class="text-muted">&copy; 2025 Gitko Analytics — Built on Cloudflare. All rights reserved.</p>
+    </footer>
+  </div>
+
+  <script>
+    const body = document.body;
+    const toggle = document.getElementById('darkModeToggle');
+    const prefersDark = localStorage.getItem('theme') === 'dark';
+
+    function applyTheme(dark) {
       body.classList.toggle('bg-dark', dark);
       body.classList.toggle('text-light', dark);
-      Array.from(document.querySelectorAll('.card, .alert')).forEach(el => {
-      el.classList.toggle('bg-dark', dark);
-      el.classList.toggle('text-light', dark);
-      });
-      if (dark) {
-        localStorage.setItem('theme', 'dark');
-      } else {
-        localStorage.setItem('theme', 'light');
-      }
+      const btn = document.getElementById('darkModeToggle');
+      if (btn) btn.textContent = dark ? 'Light Mode' : 'Dark Mode';
+      localStorage.setItem('theme', dark ? 'dark' : 'light');
     }
 
     toggle.addEventListener('click', () => {
       const dark = !body.classList.contains('bg-dark');
-     applyTheme(dark);
+      applyTheme(dark);
     });
 
     if (prefersDark) applyTheme(true);
   </script>
-
-    <footer class="pt-5 border-top">
-      <p class="text-muted">&copy; 2025 Gitko Analytics — Built with ♥ on Cloudflare | Gitko Analytics is a registered trademark of PhantomLabs CyberCO LLC. All rights reserved.</p>
-    </footer>
-  </div>
 </body>
 </html>
