--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container py-5">
     <div class="d-flex justify-content-between align-items-center mb-4">
       <div class="d-flex align-items-center">
-        <img src="https://gitko.pages.dev/assets/images/logo-normal.png" alt="Gitko Logo" style="height: 50px;" class="me-3">
+        <img src="https://gitko.st1.dolphinlabs.ie/assets/images/logo-normal.png" alt="Gitko Logo" style="height: 50px;" class="me-3">
         <h1 class="mb-0">Gitko Analytics Tracking Guide</h1>
       </div>
       <button id="darkModeToggle" class="btn btn-outline-secondary btn-sm">Toggle Dark Mode</button>
