--- a/signup.html
+++ b/signup.html
@@ -65,7 +65,7 @@
         country: formData.get('country'),
       };
       
-      fetch('main.apis.gitko.st1.dolphinlabs.ie/signup', {
+      fetch('https://main.apis.gitko.st1.dolphinlabs.ie/signup', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
